--- a/src/gui/GameWindow.fxml
+++ b/src/gui/GameWindow.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: deepskyblue;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.GameWindowController">
    <children>
-      <Text fill="WHITE" layoutX="175.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Game">
+      <Label fx:id="_intLabel" alignment="CENTER" layoutY="101.0" text="4" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <font>
-            <Font name="NanumGothic" size="90.0" />
+            <Font size="100.0" />
          </font>
-      </Text>
+      </Label>
    </children>
 </AnchorPane>
