--- a/src/gui/LevelSelectConfirmationWindow.fxml
+++ b/src/gui/LevelSelectConfirmationWindow.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: deepskyblue;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectConfimationWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectConfimationWindowController">
    <children>
-      <JFXButton fx:id="_start" layoutX="250.0" layoutY="234.0" onMouseClicked="#handleStartClick" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Start" textFill="WHITE" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0" />
-      <JFXButton fx:id="_back" layoutX="5.0" layoutY="344.0" onMouseClicked="#handleBackClick" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Back" textFill="WHITE" />
+      <JFXButton fx:id="_start" layoutX="250.0" layoutY="234.0" onMouseClicked="#handleStartClick" prefHeight="50.0" prefWidth="100.0" text="Start" textFill="WHITE" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0" />
+      <JFXButton fx:id="_back" layoutX="5.0" layoutY="344.0" onMouseClicked="#handleBackClick" prefHeight="50.0" prefWidth="100.0" text="Back" textFill="WHITE" />
       <JFXHamburger fx:id="_mainMenu" layoutX="14.0" layoutY="14.0" onMouseClicked="#handleMainMenuClick" />
       <Label fx:id="_levelDescriptor" alignment="CENTER" layoutX="283.0" layoutY="177.0" textFill="WHITE" wrapText="true" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0">
          <font>
