--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -4,10 +4,10 @@
 <?import com.jfoenix.controls.JFXHamburger?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: deepskyblue;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
    <children>
-      <JFXButton fx:id="_level1" layoutX="252.0" layoutY="117.0" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Level 1" textFill="WHITE" />
-      <JFXButton fx:id="_level2" layoutX="251.0" layoutY="231.0" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: lightblue;" text="Level 2" textFill="#f8f8f8" />
+      <JFXButton fx:id="_level1" layoutX="252.0" layoutY="117.0" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" />
+      <JFXButton fx:id="_level2" layoutX="251.0" layoutY="231.0" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" />
       <JFXHamburger fx:id="_mainMenu" layoutX="14.0" layoutY="14.0" onMouseClicked="#handleMainMenuCLick" />
    </children>
 </AnchorPane>
