Set game style to main theme

--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -7,4 +7,9 @@
 .button{
 		-fx-text-fill: white;
  		-fx-background-color: #cc0404;
-};
+}
+
+.button1{
+	-fx-background-color: white;
+	-fx-text-fill: #383838;
+}
