--- a/src/gui/MainWindow.fxml
+++ b/src/gui/MainWindow.fxml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="menuButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainWindowController">
+<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainWindowController">
+   <columnConstraints>
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+   </rowConstraints>
    <children>
-      <Text fill="WHITE" layoutX="182.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tātai" AnchorPane.leftAnchor="182.15" AnchorPane.rightAnchor="182.22998962402346">
+      <JFXButton fx:id="_mainMenuPlay" onAction="#handlePlayMenuClick" prefHeight="50.0" prefWidth="100.0" text="Play" textFill="WHITE" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin></JFXButton>
+      <JFXButton fx:id="_mainMenuStats" onAction="#handleStatsMenuClick" prefHeight="50.0" prefWidth="100.0" text="Statistics" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+      <JFXButton fx:id="_mainMenuQuit" onAction="#handleQuitClick" prefHeight="50.0" prefWidth="100.0" text="Quit" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Tātai" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <font>
             <Font name="Noto Sans CJK SC Black" size="90.0" />
          </font>
       </Text>
-      <JFXButton fx:id="_mainMenuPlay" layoutX="97.0" layoutY="262.0" onAction="#handlePlayMenuClick" prefHeight="50.0" prefWidth="100.0" text="Play" textFill="WHITE" />
-      <JFXButton fx:id="_mainMenuStats" layoutX="253.0" layoutY="261.0" onAction="#handleStatsMenuClick" prefHeight="50.0" prefWidth="100.0" text="Statistics" textFill="WHITE" />
-      <JFXButton fx:id="_mainMenuQuit" layoutX="412.0" layoutY="262.0" onAction="#handleQuitClick" prefHeight="50.0" prefWidth="100.0" text="Quit" textFill="WHITE" />
    </children>
-</AnchorPane>
+</GridPane>
