--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXHamburger?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
+<GridPane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
+   <columnConstraints>
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <JFXButton fx:id="_level1" layoutX="252.0" layoutY="117.0" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" />
-      <JFXButton fx:id="_level2" layoutX="251.0" layoutY="231.0" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" />
-      <JFXHamburger fx:id="_mainMenu" layoutX="14.0" layoutY="14.0" onMouseClicked="#handleMainMenuCLick" />
+      <JFXButton fx:id="_level1" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" />
+      <JFXButton fx:id="_level2" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.rowIndex="1" />
    </children>
-</AnchorPane>
+</GridPane>
