--- a/src/gui/LevelSelectConfirmationWindow.fxml
+++ b/src/gui/LevelSelectConfirmationWindow.fxml
@@ -8,16 +8,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <GridPane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectConfimationWindowController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints />
-      <RowConstraints maxHeight="161.0" minHeight="10.0" prefHeight="134.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="166.0" minHeight="10.0" prefHeight="82.0" valignment="CENTER" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="161.0" minHeight="10.0" prefHeight="134.0" />
+      <RowConstraints maxHeight="166.0" minHeight="10.0" prefHeight="82.0" valignment="CENTER" />
+      <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="75.0" />
    </rowConstraints>
    <children>
       <JFXButton fx:id="_start" onMouseClicked="#handleStartClick" prefHeight="50.0" prefWidth="100.0" text="Start" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
