--- a/src/gui/ResultsWindow.fxml
+++ b/src/gui/ResultsWindow.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: deepskyblue;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ResultsWindowController">
    <children>
-      <Label fx:id="_scoreLabel" alignment="CENTER" layoutX="282.0" layoutY="151.0" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <Label fx:id="_scoreLabel" alignment="CENTER" layoutY="54.0" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
+      <TableView fx:id="_resultsTable" layoutX="24.0" layoutY="155.0" prefHeight="200.0" prefWidth="559.0">
+         <columns>
+            <TableColumn fx:id="qNo" prefWidth="75.0" text="Question" />
+            <TableColumn fx:id="qInt" prefWidth="99.0" text="Number" />
+            <TableColumn fx:id="qTranslation" prefWidth="384.0" text="Answer" />
+         </columns></TableView>
    </children>
 </AnchorPane>
