--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -10,11 +10,24 @@
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+      <RowConstraints vgrow="ALWAYS" />
+      <RowConstraints vgrow="ALWAYS" />
    </rowConstraints>
    <children>
       <JFXButton fx:id="_level1" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" />
-      <JFXButton fx:id="_level2" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.rowIndex="1" />
+      <GridPane GridPane.rowIndex="1">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="143.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="570.0" minWidth="10.0" prefWidth="457.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <JFXButton fx:id="_menuButton" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+         </children>
+      </GridPane>
+      <JFXButton fx:id="_level2" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
    </children>
 </GridPane>
