--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -5,24 +5,24 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
+<GridPane styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/java fx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LevelSelectWindowController">
    <columnConstraints>
-      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="600.0" prefWidth="600.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints vgrow="ALWAYS" />
-      <RowConstraints vgrow="ALWAYS" />
+      <RowConstraints minHeight="200.0" prefHeight="200.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="200.0" prefHeight="200.0" vgrow="ALWAYS" />
    </rowConstraints>
    <children>
       <JFXButton fx:id="_level1" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" />
       <GridPane GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="143.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="570.0" minWidth="10.0" prefWidth="457.0" />
+          <ColumnConstraints hgrow="SOMETIMES" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="448.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <JFXButton fx:id="_menuButton" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
