--- a/src/gui/MainWindow.fxml
+++ b/src/gui/MainWindow.fxml
@@ -19,7 +19,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <JFXButton fx:id="_mainMenuPlay" onAction="#handlePlayMenuClick" prefHeight="50.0" prefWidth="100.0" text="Play" textFill="WHITE" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+      <JFXButton fx:id="_mainMenuPlay" onAction="#handlePlayMenuClick" prefHeight="50.0" prefWidth="100.0" text="Play" textFill="WHITE" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></JFXButton>
