--- a/src/gui/GameWindow.fxml
+++ b/src/gui/GameWindow.fxml
@@ -30,7 +30,7 @@
          <GridPane.margin>
             <Insets left="20.0" />
          </GridPane.margin></JFXButton>
-      <Label fx:id="_translatedLabel" alignment="CENTER" prefHeight="16.0" prefWidth="291.0" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
+      <Label fx:id="_translatedLabel" alignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <font>
             <Font size="35.0" />
          </font>
