--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -46,11 +46,23 @@
                   <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="_correctButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="correct" GridPane.rowIndex="2" />
-                  <Button fx:id="_incorrectButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="incorrect" GridPane.rowIndex="3" />
-                  <Button fx:id="_totalButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="total" GridPane.rowIndex="4" />
-                  <Button fx:id="_exitButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="exit" GridPane.rowIndex="5" />
-                  <Button fx:id="_averageButton" mnemonicParsing="false" style="-fx-background-color: #383838;" text="avg" GridPane.rowIndex="1" />
+                  <Button fx:id="_correctButton" mnemonicParsing="false" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="correct" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font></Button>
+                  <Button fx:id="_incorrectButton" mnemonicParsing="false" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="incorrect" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font></Button>
+                  <Button fx:id="_totalButton" mnemonicParsing="false" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="total" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font></Button>
+                  <Button fx:id="_exitButton" mnemonicParsing="false" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="exit" GridPane.rowIndex="5" />
+                  <Button fx:id="_averageButton" mnemonicParsing="false" style="-: #383838;" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="avg" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font></Button>
                </children>
             </GridPane>
             <GridPane>
@@ -62,7 +74,7 @@
                 <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="221.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="_statLabel" style="-fx-border-color: white; -fx-border-width: 0 2 0 0;" text="99.9" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Label fx:id="_statLabel" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="99.9" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
                         <Font name="NanumGothic" size="150.0" />
                      </font>
