--- a/src/gui/GameWindow.fxml
+++ b/src/gui/GameWindow.fxml
@@ -69,7 +69,7 @@
                   <Insets />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_recordButton" onAction="#handleCorrectClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Record" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_recordButton" onAction="#handleRecordClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Record" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
       <Button fx:id="_exitButton" mnemonicParsing="false" onAction="#handleQuitClick" styleClass="button1" stylesheets="@TataiTheme.css" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
