--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -20,6 +21,9 @@
          <font>
             <Font size="60.0" />
          </font>
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
       </Label>
       <GridPane GridPane.rowIndex="1">
         <columnConstraints>
@@ -31,9 +35,9 @@
           <RowConstraints maxHeight="129.0" minHeight="65.0" prefHeight="114.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_menuButton" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_level1" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_level2" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+            <JFXButton fx:id="_menuButton" buttonType="RAISED" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level1" buttonType="RAISED" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level2" buttonType="RAISED" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
          </children>
       </GridPane>
    </children>
