--- a/src/gui/MainWindow.fxml
+++ b/src/gui/MainWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -19,16 +20,19 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <JFXButton fx:id="_mainMenuPlay" onAction="#handlePlayMenuClick" prefHeight="50.0" prefWidth="100.0" text="Play" textFill="WHITE" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+      <JFXButton fx:id="_mainMenuPlay" buttonType="RAISED" onAction="#handlePlayMenuClick" prefHeight="50.0" prefWidth="100.0" text="Play" textFill="WHITE" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></JFXButton>
-      <JFXButton fx:id="_mainMenuStats" onAction="#handleStatsMenuClick" prefHeight="50.0" prefWidth="100.0" text="Statistics" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
-      <JFXButton fx:id="_mainMenuQuit" onAction="#handleQuitClick" prefHeight="50.0" prefWidth="100.0" text="Quit" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+      <JFXButton fx:id="_mainMenuStats" buttonType="RAISED" onAction="#handleStatsMenuClick" prefHeight="50.0" prefWidth="100.0" text="Statistics" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+      <JFXButton fx:id="_mainMenuQuit" buttonType="RAISED" onAction="#handleQuitClick" prefHeight="50.0" prefWidth="100.0" text="Quit" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
       <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Tātai" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <font>
             <Font name="Noto Sans CJK SC Black" size="90.0" />
          </font>
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
       </Text>
    </children>
 </GridPane>
