--- a/src/gui/ResultsWindow.fxml
+++ b/src/gui/ResultsWindow.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -27,6 +28,9 @@
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
       </Label>
       <TableView fx:id="_resultsTable" styleClass="table" stylesheets="@TataiTheme.css" GridPane.rowIndex="1">
          <columns>
@@ -38,6 +42,9 @@
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
       </TableView>
       <GridPane GridPane.rowIndex="2">
         <columnConstraints>
@@ -48,8 +55,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_mainMenuButton" onAction="#handleMainMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Continue" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_level2Button" onAction="#handleLevel2ButtonClick" prefHeight="50.0" prefWidth="100.0" text="Play Level 2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_mainMenuButton" buttonType="RAISED" onAction="#handleMainMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Continue" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_level2Button" buttonType="RAISED" onAction="#handleLevel2ButtonClick" prefHeight="50.0" prefWidth="100.0" text="Play Level 2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
    </children>
