--- a/src/gui/TutorialWindow.fxml
+++ b/src/gui/TutorialWindow.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -26,6 +28,7 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -37,6 +40,7 @@
             <Circle fx:id="_progressIcon4" fill="#2c2c2c" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
             <Circle fx:id="_progressIcon5" fill="#2c2c2c" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
             <Circle fx:id="_progressIcon6" fill="#2c2c2c" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.halignment="CENTER" />
+            <Circle fx:id="_progressIcon7" fill="#2c2c2c" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
       <GridPane GridPane.rowIndex="1">
@@ -51,11 +55,6 @@
           <RowConstraints maxHeight="133.0" minHeight="10.0" prefHeight="88.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="_numberLabel" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-               <font>
-                  <Font size="96.0" />
-               </font>
-            </Label>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="286.0" minWidth="10.0" prefWidth="265.0" />
@@ -68,8 +67,17 @@
                   <Button fx:id="_nextButton" mnemonicParsing="false" onAction="#handleNextClick" prefHeight="50.0" prefWidth="100.0" text="Next" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
-            <ImageView fx:id="_imageView" fitHeight="222.0" fitWidth="349.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <ImageView fx:id="_imageView" fitHeight="222.0" fitWidth="349.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <effect>
+                  <DropShadow color="WHITE" height="5.0" radius="2.0" spread="1.0" width="5.0" />
+               </effect></ImageView>
+            <TextArea fx:id="_textArea" prefHeight="200.0" prefWidth="200.0" styleClass="root" GridPane.rowIndex="1" />
          </children>
       </GridPane>
+      <Label fx:id="_titleLabel" style="-fx-text-alignment: center;" styleClass="root" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+         <font>
+            <Font name="NanumBarunGothic" size="96.0" />
+         </font>
+      </Label>
    </children>
 </GridPane>
